package core.character;

public class Enemy extends AbstractCharacter {
}
