package core.impl.effects;

import core.character.Hero;

public abstract class Effect {

    public abstract void affect(Hero hero);
}
