package core.impl.effects;

import core.character.Hero;

public class HarmEffect extends Effect {

    @Override
    public void affect(Hero hero) {

    }
}
