package core.impl.effects;

import core.character.Hero;

public class HealEffect extends Effect {
    @Override
    public void affect(Hero hero) {

    }
}
