@startuml Diagramme de classes

hide empty members
hide empty methods

' Functions definition
    !function $member($type, $name)
    !return $name + " : <color:green>" + $type + "</color>"
    !endfunction

    !function $list($type, $name)
    !return $member("List<" + $type + ">", $name)
    !endfunction

    !function $int($name)
    !return $member(int, $name)
    !endfunction

    !function $void($name)
    !return $member(void, $name)
    !endfunction

' End functions definition

' Classes definitions

    class "World" as w {
        -$int(currentLevelIndex)
        -$list(Level, levels)
    }

    abstract "AbstractCharacter" as ac {
        #$int(hp)
        #$int(atk)
        #$int(def)
        +$void("takeDamage(double)")
        +{abstract} $void("attack(AbtractCharacter)")
        +{abstract} $void("move()")
    }

    class "Hero" as h {
        -$int(points)
    }

    interface "KeyAdapter" as ka {
        +$void("keyPressed(KeyEvent)")
        +$void("keyReleased(KeyEvent)")
        +$void("keyTyped(KeyEvent)")

    }

    class "Swordsman" as sm {

    }

    class "Archer" as cra {

    }

    class "Wizard" as wiz {

    }

    class "Enemy" as e {
        +$void("move()")

    }

    class "IA" as ia {
        +$void("move()")
    }

    class "Level" as l {
        -$int(difficulty)
        -$list(Enemy, enemies)
        -$list("List<MapTile>", tiles)
    }

    class "MapTile" as mt {
        
    }

    class "MapObject" as mo {
        -$member(Effect, effect)
    }

    abstract "Effect" as eff {
        +{abstract} $member(void, "affect(Hero)")
    }

    class "HealEffect" as heal {

    }

    class "HarmEffect" as harm {

    }

    abstract "AbstractMapComponent" as mc {
        #$member(Point, position)
        #$member(Image, image)
        +$void("draw(Graphics)")
    }
' End of Classes definitions

' Links
    ac --|> mc

    h -up-|> ac
    h -down-> w
    h -left-> ka

    e -up-|> ac
    e --> ia

    sm --|> h

    cra --|> h

    wiz --|> h

    w "1..N" -right-> l

    l "1..N" -right-> e

    l "1..N" -down-> mt

    mt --|> mc

    mt "0..1" --> mo

    mo -right-> mc
    mo --> eff
    heal -right-|> eff
    harm -right-|> eff

' End of Links

@enduml